刪除 h1 並新增 title 與 SEO

--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lang="zh-Hant">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="description" content="Ling 的個人網頁，分享她的專業背景、學習與發展經驗，以及個人成長與跨文化交流的心得。">
+  <title>Ling 的個人網頁</title>
   <style>
     *, *::before, *::after { box-sizing: border-box; }
     html, body { margin: 0; padding: 0; max-width: 100%; }
@@ -24,14 +25,13 @@
       <a href="https://example.com/blog">技術部落格</a>
       <a href="mailto:me@example.com">聯絡我</a>
     </nav>
-    <h1>你好，我是小明：前端工程師新手之路</h1>
-    <h1>你好，我是小明：前端工程師新手之路</h1>
+    <h1>你好，我是 Ling：目前正在參加六角學院 Vibe Coding 體驗營</h1>
     <p>歡迎來到我的個人網站！這裡整理了學習紀錄、Side Project 與實作心得。</p>
   </header>
 
   <footer class="container" role="contentinfo">
     <p>© 2025 My Portfolio · <a href="#">GitHub</a></p>
-    <img src="https://source.unsplash.com/600x200/?technology,abstract" alt="">
+    <img src="https://www.fertilome.com/media/klowrey/Article%20Images/Tree.jpg" alt="tree">
   </footer>
 </body>
 </html>
