--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
               <a href="#contact">聯絡我</a>
             </div>
           </div>
-          <img src="https://source.unsplash.com/400x400/?developer,laptop" alt="在筆電前工作的工程師">
+          <img src="https://plus.unsplash.com/premium_photo-1678565879444-f87c8bd9f241?w=600&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8NXx8cHJvZ3JhbW1lcnxlbnwwfHwwfHx8MA%3D%3D" alt="在筆電前工作的工程師">
         </div>
       </section>
       <!-- SECTION:ABOUT-END -->
@@ -129,7 +129,7 @@
 
     <footer class="container" role="contentinfo">
       <p>© 2025 My Portfolio · <a href="https://github.com/yourname">GitHub</a></p>
-      <img src="https://source.unsplash.com/600x200/?tree" alt="樹">
+      <img src="https://images.unsplash.com/photo-1528183429752-a97d0bf99b5a?w=600&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8NHx8dHJlZXxlbnwwfHwwfHx8MA%3D%3D" alt="樹">
     </footer>
   </div>
 </body>
