--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
       <nav class="nav" aria-label="主選單">
         <span class="logo">Ling · Frontend Dev</span>
         <a class="nav-link" href="#hero">首頁</a>
-        <a class="nav-link" href="#about">關於我</a>
+        <a class="nav-link" href="#about">關於Ling</a>
         <a class="nav-link" href="#skills">技能</a>
         <a class="nav-link" href="#projects">作品集</a>
         <a class="nav-link" href="#contact">聯絡我</a>
