修改 meta content

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Ling 的個人網頁，分享她的專業背景、學習與發展經驗，以及個人成長與跨文化交流的心得。">
+  <meta name="description" content="歡迎來到 Ling 的個人空間！在這裡，我將分享我的專業背景、學習發展的實戰經驗，以及如何透過跨文化交流，實現個人成長與心靈蛻變的精彩歷程。。">
   <title>Ling 的個人網頁</title>
   <style>
     /* CSS:BASE-START */
